--- a/example06-presentation/src/main/angular/src/index.html
+++ b/example06-presentation/src/main/angular/src/index.html
@@ -7,8 +7,28 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <style>
+    html {
+      height: 100%;
+    }
+    body {
+      width: 100%;
+      height: 100%;
+    }
+    .bg {
+      width: 100%;
+      height: 100%;
+      background-image: url('assets/bg.jpg');
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+    }
+  </style>
 </head>
 <body>
-  <app-root></app-root>
+  <div class="bg">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
